fixed link error

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       href="./images/icons/museumi-ico.svg"
-      type="image/x-icon"/
+      type="image/x-icon"
     >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
