--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
       </section>
       <!-- subscribe -->
       <section class="subscribe">
-        <div class="subscribe__container">
+        <div class="subscribe__contain">
           <h3 class="subscribe__title title">
             Підписка
           </h3>
@@ -268,12 +268,20 @@
             <p class="footer__text footer__text--title">
               Контакти:
             </p>
-            <p class="footer__text">
-              вул. М. Грушевського, 6; Київ, 01001 <br>
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54 <br>
-              e-mail: info@namu.kiev.ua
-            </p>
+            <div class="footer__links">
+              <a href="http://" class="footer__link">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+380442781357" class="footer__link">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a href="tel:+380442787454" class="footer__link">
+                факс +38 (044) 278-74-54
+              </a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
           <a href="#main" class="footer__arrow">
             <img src="./images/320/arrow-up.svg"
