add events tittle

--- a/src/index.html
+++ b/src/index.html
@@ -140,6 +140,10 @@
 
     <main class="page__content">
       <section class="page__section events" id="events">
+        <h2 class="events__tittle">
+          Актуальні події
+        </h2>
+
         <div class="events__exhibition exhibition">
           <img
             src="./images/events_foto/event_1.jpg"
