centered exhibition block on tablet width

--- a/src/index.html
+++ b/src/index.html
@@ -116,10 +116,9 @@
     <main class="main">
       <div class="main__content">
         <section class="events" id="events">
-          <h2 class="section__title">Актуальнi події</h2>
           <article class="article-exhibition">
             <div class="article-exhibition__wrapper">
-
+              <h2 class="section__title">Актуальнi події</h2>
               <img
                 src="./images/pictures/river.jpg"
                 alt="River picture.jpg"
@@ -175,7 +174,7 @@
         </section>
 
         <section class="gallery" id="gallery">
-          <h2 class="section__title">Галерея</h2>
+          <h2 class="section__title gallery--title">Галерея</h2>
           <article class="picture">
             <div class="wrapper">
               <div class="picture__item picture--woman"></div>
