--- a/src/index.html
+++ b/src/index.html
@@ -179,6 +179,159 @@
         </div>
       </section>
 
+      <section class="gallery" id="gallery">
+        <div class="gallery__container container">
+          <h2  class="gallery__title">Галерея</h2>
+
+          <div class="gallery__slider">
+            <img
+              id="img1"
+              src="./images/gallery-1.png"
+              alt="1"
+              class="gallery__img gallery__img--one"
+            >
+
+            <img
+              id="img2"
+              src="./images/gallery-2.png"
+              alt="2"
+              class="gallery__img gallery__img--two"
+            >
+
+            <img
+              id="img3"
+              src="./images/gallery-3.png"
+              alt="3"
+              class="gallery__img gallery__img--three"
+            >
+            <img
+              id="img4"
+              src="./images/gallery-4.png"
+              alt="4"
+              class="gallery__img gallery__img--four"
+            >
+          </div>
+          <div class="gallery__dots">
+            <a class="gallery__dot" href="#img1" ></a>
+            <a class="gallery__dot" href="#img2"></a>
+            <a class="gallery__dot" href="#img3"></a>
+            <a class="gallery__dot" href="#img4"></a>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription">
+        <div class="subscription__container">
+          <div class="subscription__top">
+            <h2 class="subscription__title">Підписка</h2>
+            <h3 class="subscription__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
+          </div>
+          <form
+            action="#"
+            class="subscription__form"
+            method="get"
+          >
+            <input
+              type="email"
+              class="subscription__item"
+              placeholder="E-mail"
+              required>
+          </input>
+            <button class="subscription__button"  type="submit">
+              <img src="./images/buttton-green.svg" alt="arrow">
+            </button>
+          </form>
+        </div>
+      </section>
+
+      <footer class="footer" id="contacts">
+        <div class="footer__container container">
+          <a href="#" class="footer__logo">
+            NA<br>MU
+          </a>
+
+          <div class="footer__icon">
+            <a
+              href="#facebook.com" class="footer__fb-inst"
+              target="_blank"
+            >
+              <img src="./images/Facebook (1).svg" alt="facebook">
+            </a>
+            <a
+              href="#instagram.com" class="footer__fb-inst"
+              target="_blank"
+            >
+              <img src="./images/inst-2.svg" alt="instagram">
+            </a>
+          </div>
+
+          <div class="footer__info">
+            <p class="footer__title">Графік роботи</p>
+            <div class="footer__info--block">
+              <p class="footer__time">12:00 — 20:00</p>
+              <p class="footer__day">середа</p>
+            </div>
+            <div class="footer__info--block">
+              <p class="footer__time">12:00 — 20:00</p>
+              <p class="footer__day">четвер</p>
+            </div>
+            <div class="footer__info--block">
+              <p class="footer__time">12:00 — 20:00</p>
+              <p class="footer__day">п’ятниця</p>
+            </div>
+            <div class="footer__info--block">
+              <p class="footer__time">11:00 — 19:00</p>
+              <p class="footer__day">субота</p>
+            </div>
+            <div class="footer__info--block">
+              <p class="footer__time">11:00 — 19:00</p>
+              <p class="footer__day">неділя</p>
+            </div>
+            <p class="footer__description"> <span class="footer__description--weekend">Вихідні</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину<br>
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="footer__title">
+              Контакти:
+            </p>
+            <p class="footer__description">
+              вул. М. Грушевського, 6; Київ, 01001 <br>
+              тел. +38 (044) 278-13-57
+              факс +38 (044) 278-74-54 <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+
+          <a href="#" class="footer__icon-bottom">
+            <img src="./images/footer-icon.svg"
+            alt="home">
+          </a>
+
+          <div class="footer__line"></div>
+
+          <div class="footer__nav">
+            <div class="footer__list">
+              <a href="#gallery" class="footer__item">Галерея</a>
+              <a href="#" class="footer__item">Про Нас</a>
+              <a href="#events" class="footer__item">Виставки та події</a>
+              <a href="#contacts" class="footer__item">Контакти</a>
+            </div>
+          </div>
+
+
+          <div class="footer__copy">
+            <p class="footer__copy-item">
+              Designed by Zhyriada Marina
+            </p>
+            <p class="footer__copy-item">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </footer>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
