--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/IBM+Plex+Sans?query=ibm">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Montserrat?query=mon">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="shortcut icon"
       type="image/png"
@@ -273,7 +275,7 @@
             Контакти:
           </p>
           <div class="footer__links">
-            <a href="http://" class="footer__link">
+            <a href="https://goo.gl/maps/QLh1kQf9Fopwfvv56" class="footer__link">
               вул. М. Грушевського, 6; Київ, 01001
             </a>
             <a href="tel:+380442781357" class="footer__link">
