--- a/src/index.html
+++ b/src/index.html
@@ -275,7 +275,8 @@
             Контакти:
           </p>
           <div class="footer__links">
-            <a href="https://goo.gl/maps/QLh1kQf9Fopwfvv56" class="footer__link">
+            <a href="https://goo.gl/maps/QLh1kQf9Fopwfvv56"
+              target="_blank" class="footer__link">
               вул. М. Грушевського, 6; Київ, 01001
             </a>
             <a href="tel:+380442781357" class="footer__link">
