--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           <a href="#" class="aside__buy-tickets--button button">КВИТКИ</a>
         </div>
 
-        <span class="aside__events--rotated">Події</span>
+        <a href="#events" class="aside__events--rotated">Події</a>
       </aside>
     </header>
 
@@ -188,8 +188,9 @@
 
         <section class="subscribe" id="about-us">
           <form
-            id="email"
-            action="post"
+            action="#about-us"
+            target="_top"
+            method="get"
             class="purchase"
           >
             <h2 class="purchase__title">Підписка</h2>
@@ -200,13 +201,16 @@
             <div class="purchase__wrapper">
               <input
                 type="email"
-                id="usremail"
+                name="E-mail"
                 class="purchase__email"
                 placeholder="E-mail"
                 autocomplete="email"
                 required
               >
-              <button type="submit" class="purchase__button">
+              <button
+                type="submit"
+                class="purchase__button"
+              >
                 <img src="./images/icons/go-black.svg" alt="submit">
               </button>
             </div>
@@ -322,7 +326,7 @@
             Designed by Zhyriada Marina
           </article>
           <article class="footer__copyright--caption">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2023. All Rights Reserved.
           </article>
         </div>
       </div>
