fixed form reset

--- a/src/index.html
+++ b/src/index.html
@@ -188,9 +188,8 @@
 
         <section class="subscribe" id="about-us">
           <form
-            action="#about-us"
-            target="_top"
-            method="get"
+            onsubmit="this.reset(); return false;"
+            method="post"
             class="purchase"
           >
             <h2 class="purchase__title">Підписка</h2>
