--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
           <div class="header__top">
             <a href="#burger" class="icon icon--menu"></a>
 
-            <a href="#" class="logo">
+            <a href="#" class="logo logo__header">
               <img
                 class="lodo__img"
-                src="./images/logo.png"
+                src="./images/logo.svg"
                 alt="logo"
               >
             </a>
@@ -58,14 +58,21 @@
       <div class="burger__container">
         <div class="burger__content">
           <nav class="nav burger__nav">
-            <div class="icon__container">
+            <div class="nav__icon">
               <a href="#" class="icon icon--cross"></a>
             </div>
             <div class="nav__container">
-              <a href="#galery" class="nav__item nav__item--galery">Галерея</a>
-              <a href="#about" class="nav__item nav__item--about">Про Нас</a>
-              <a href="#events" class="nav__item nav__item--events">Виставки та<br>події</a>
-              <a href="#contacts" class="nav__item nav__item--contacts">Контакти</a>
+              <div class="nav__box">
+                <a href="#galery" class="nav__item nav__item--galery">Галерея</a>
+
+                <a href="#events" class="nav__item nav__item--events">Виставки та<br>події</a>
+              </div>
+
+              <div class="nav__box">
+                <a href="#about" class="nav__item nav__item--about">Про Нас</a>
+
+                <a href="#contacts" class="nav__item nav__item--contacts">Контакти</a>
+              </div>
             </div>
           </nav>
           <div class="burger__line"></div>
@@ -103,7 +110,7 @@
           <h2 class="cur-events__grand-title">Актуальні
             події
           </h2>
-          <article class="cur-events__article">
+          <div class="cur-events__article">
             <div class="cur-events__img cur-events__img--tree"></div>
             <div class="cur-events__info">
               <div class="cur-events__data-box">
@@ -119,9 +126,9 @@
 
               <div class="cur-events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
             </div>
-          </article>
+          </div>
 
-          <article class="cur-events__article">
+          <div class="cur-events__article">
             <div class="cur-events__img cur-events__img--girl"></div>
             <div class="cur-events__info">
               <div class="cur-events__data-box">
@@ -136,21 +143,22 @@
 
               <div class="cur-events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
             </div>
-          </article>
-
-          <article class="cur-events__article cur-events__article--orange">
-            <div class="cur-events__img cur-events__img--orange"></div>
-            <div class="cur-events__info cur-events__info--orange">
-              <div class="cur-events__data-box cur-events__data-box--orange">
-                <div class="cur-events__small-title cur-events__small-title--orange">ЛЕКЦІЯ</div>
-                <div class="cur-events__data cur-events__data--orange">26/08/2019 - 11:00</div>
-              </div>
-
-              <div class="cur-events__title-box">
-                <div class="cur-events__title cur-events__title--orange">Від класицизму до романтизму</div>
-              </div>
+          </div>
+        </div>
+      </div>
+      <div class="cur-events__article cur-events__article--orange">
+        <div class="cur-events__container--orange">
+          <div class="cur-events__img cur-events__img--orange"></div>
+          <div class="cur-events__info cur-events__info--orange">
+            <div class="cur-events__data-box cur-events__data-box--orange">
+              <div class="cur-events__small-title cur-events__small-title--orange">ЛЕКЦІЯ</div>
+              <div class="cur-events__data cur-events__data--orange">26/08/2019 - 11:00</div>
             </div>
-          </article>
+
+            <div class="cur-events__title-box">
+              <div class="cur-events__title cur-events__title--orange">Від класицизму до романтизму</div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -178,9 +186,114 @@
       </div>
     </section>
 
-    <section class="Subscription"></section>
+    <section class="subscription">
+      <div class="subscription__container">
+        <div class="subscription__content">
+          <div class="page__title subscription__title">Підписка</div>
 
-    <section class="footer"></section>
+          <div class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+
+          <form
+            action=" "
+            class="subscription__form button" onsubmit="this.reset(); return false;"
+          >
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+              class="button__rec button__rec--sub"
+            >
+
+            <button class="button__green-rec button__green-rec--sub"></button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="footer__container">
+        <div class="footer__content">
+          <div class="footer__grid">
+            <div class="footer__media">
+              <a href="#" class="logo">
+                <img
+                  class="lodo__img"
+                  src="./images/logo-footer.svg"
+                  alt="logo"
+                >
+              </a>
+
+              <div class="footer__icons">
+                <a href="#" class="icon icon--face"></a>
+
+                <a href="#" class="icon icon--inst"></a>
+              </div>
+            </div>
+
+            <div class="timetable timetable--footer">
+              <div class="timetable__container">
+                <h6 class="timetable__title timetable__title--footer">Графік роботи</h6>
+                <div class="timetable__body timetable__body--foter">
+                  <span class="timetable__time">12:00 — 20:00</span>
+                  середа <br>
+                  <span class="timetable__time">12:00 — 20:00</span>
+                  четвер <br>
+                  <span class="timetable__time">12:00 — 20:00</span>
+                  п’ятниця <br>
+                  <span class="timetable__time">11:00 — 19:00</span>
+                  субота <br>
+                  <span class="timetable__time">11:00 — 19:00</span>
+                  неділя
+                </div>
+              </div>
+
+              <div class="burger__text">
+                <span class="burger__time">Вихідні:</span> понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+
+            <div class="timetable">
+              <div class="timetable__container">
+                <h6 class="timetable__title">Контакти:</h6>
+                <div class="timetable__body">
+                  вул. М. Грушевського, 6; Київ, 01001
+                  <br>
+                  тел. +38 (044) 278-13-57
+                  <br>
+                  факс +38 (044) 278-74-54
+                  <br>
+                  e-mail: info@namu.kiev.ua
+                </div>
+              </div>
+            </div>
+
+            <nav class="nav">
+              <div class="nav__container">
+                <div class="nav__box">
+                  <a href="#galery" class="nav__item nav__item--galery">Галерея</a>
+
+                  <a href="#events" class="nav__item nav__item--events">Виставки та<br>події</a>
+                </div>
+
+                <div class="nav__box">
+                  <a href="#about" class="nav__item nav__item--about">Про Нас</a>
+
+                  <a href="#contacts" class="nav__item nav__item--contacts">Контакти</a>
+                </div>
+              </div>
+            </nav>
+            <div class="footer__footer">
+              <div>Designed by Zhyriada Marina</div>
+
+              <div>Copyright © 2019. All Rights Reserved.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
