add final edits

--- a/src/index.html
+++ b/src/index.html
@@ -26,33 +26,32 @@
     <script type="text/javascript" src="scripts/main.js"></script>
     <!-- #region header -->
     <header id="home" class="header">
-      <div class="container">
-        <div class="header__content">
-          <div class="header__bg"></div>
-          <div class="header__top">
-            <a href="#menu" class="icon icon--menu header__icon"></a>
-
+      <div class="header__content">
+        <div class="header__top">
+          <div class="header__bar">
             <a href="#home" class="header__logo">
               <img src="./images/logo.svg" alt="NAMU">
             </a>
           </div>
+        </div>
 
-          <div class="art-museum">
-            <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a href="#menu" class="icon icon--menu header__icon"></a>
 
-            <div class="button art-museum__button">
-              <a href="#actual-events" class="button__link">КВИТКИ</a>
+        <div class="art-museum">
+          <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-              <a href="#actual-events">
-                <div class="button__arrow"></div>
-              </a>
+          <div class="button art-museum__button">
+            <a href="#actual-events" class="button__link">КВИТКИ</a>
 
-              <a href="#actual-events"
-                class="button__events"
-              >
-                ПОДІЇ
-              </a>
-            </div>
+            <a href="#actual-events">
+              <div class="button__arrow"></div>
+            </a>
+
+            <a href="#actual-events"
+              class="button__events"
+            >
+              ПОДІЇ
+            </a>
           </div>
         </div>
       </div>
@@ -199,10 +198,37 @@
             <h1 class="section-title">Галерея</h1>
 
             <div class="galery__photocards">
-              <div class="galery__photo galery__photo--1"></div>
-              <div class="galery__photo galery__photo--2"></div>
-              <div class="galery__photo galery__photo--3"></div>
-              <div class="galery__photo galery__photo--4"></div>
+              <a href="#" class="galery__link galery__link--1">
+                <img
+                  src="./images/galery/galary-photo-1.png"
+                  alt="Woman in national wear"
+                  class="galery__photo"
+                >
+              </a>
+
+              <a href="#" class="galery__link galery__link--2">
+                <img
+                  src="./images/galery/galary-photo-2.png"
+                  alt="Winter street"
+                  class="galery__photo"
+                >
+              </a>
+
+              <a href="#" class="galery__link galery__link--3">
+                <img
+                  src="./images/galery/galaru-photo-3.png"
+                  alt="Пirl on the bench"
+                  class="galery__photo galery__photo--short"
+                >
+              </a>
+
+              <a href="#" class="galery__link galery__link--4">
+                <img
+                  src="./images/galery/galary-photo-4.png"
+                  alt="Sea"
+                  class="galery__photo galery__photo--short"
+                >
+              </a>
             </div>
 
             <div class="galery__bullets">
@@ -322,7 +348,7 @@
             <ul class="nav__list nav__list--footer">
               <li class="nav__item">
                 <a class="nav__link nav__link--footer" href="#galery">
-                  Галерея
+                  About us
                 </a>
               </li>
 
