--- a/src/index.html
+++ b/src/index.html
@@ -348,7 +348,7 @@
             <ul class="nav__list nav__list--footer">
               <li class="nav__item">
                 <a class="nav__link nav__link--footer" href="#galery">
-                  About us
+                  Галерея
                 </a>
               </li>
 
