--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,11 @@
         <div class="header__top">
           <div class="header__bar">
             <a href="#home" class="header__logo">
-              <img src="./images/logo.svg" alt="NAMU">
+              <img
+                src="./images/logo.svg"
+                alt="NAMU"
+                class="header__logo-image"
+              >
             </a>
           </div>
         </div>
@@ -279,7 +283,11 @@
           <!-- #region footer-top -->
           <div class="footer__top">
             <a href="#home" class="footer__logo">
-              <img src="./images/logo.svg" alt="NAMU">
+              <img
+                src="./images/logo.svg"
+                alt="NAMU"
+                class="footer__logo-image"
+              >
             </a>
 
             <div class="footer__icon-block">
@@ -288,15 +296,13 @@
                 class="footer__icon footer__icon--facebook"
                 target="_blank"
               >
-                <img src="./images/icon/facebook-letter-logo.svg" alt="Facebook">
               </a>
 
               <a
                 href="https://www.instagram.com/namu.museum/"
-                class="footer__icon"
+                class="footer__icon footer__icon--instagram"
                 target="_blank"
               >
-                <img src="./images/icon/instagram-logo.svg" alt="Instagram">
               </a>
             </div>
           </div>
