--- a/src/index.html
+++ b/src/index.html
@@ -252,42 +252,37 @@
 
           <div class="footer__icon">
             <a
-              href="#facebook.com" class="footer__fb-inst"
+              href="https://www.facebook.com"
+              class="footer__fb-inst"
               target="_blank"
             >
               <img src="./images/Facebook (1).svg" alt="facebook">
             </a>
             <a
-              href="#instagram.com" class="footer__fb-inst"
+              href="https://www.instagram.com"
+              class="footer__fb-inst"
               target="_blank"
             >
-              <img src="./images/inst-2.svg" alt="instagram">
+              <img src="./images/instagram.dia.svg" alt="instagram">
             </a>
           </div>
 
           <div class="footer__info">
             <p class="footer__title">Графік роботи</p>
-            <div class="footer__info--block">
-              <p class="footer__time">12:00 — 20:00</p>
-              <p class="footer__day">середа</p>
-            </div>
-            <div class="footer__info--block">
-              <p class="footer__time">12:00 — 20:00</p>
-              <p class="footer__day">четвер</p>
-            </div>
-            <div class="footer__info--block">
-              <p class="footer__time">12:00 — 20:00</p>
-              <p class="footer__day">п’ятниця</p>
-            </div>
-            <div class="footer__info--block">
-              <p class="footer__time">11:00 — 19:00</p>
-              <p class="footer__day">субота</p>
-            </div>
-            <div class="footer__info--block">
-              <p class="footer__time">11:00 — 19:00</p>
-              <p class="footer__day">неділя</p>
-            </div>
-            <p class="footer__description"> <span class="footer__description--weekend">Вихідні</span> понеділок, вівторок<br>
+
+            <ul class="footer__info--block">
+              <li><strong>12:00 — 20:00</strong> середа</li>
+              <strong>12:00 — 20:00</strong> четвер</li>
+              <li> <strong>12:00 — 20:00</strong> п’ятниця</li>
+              <li><strong>11:00 — 19:00</strong> субота</li>
+              <li><strong>11:00 — 19:00</strong> неділя</li>
+            </ul>
+
+            <p class="footer__description">
+              <span class="footer__description--weekend">
+                <strong>Вихідні:</strong>
+              </span>
+              понеділок, вівторок<br>
               Каса припиняє роботу за 1 годину<br>
               до закриття музею
             </p>
@@ -297,12 +292,30 @@
             <p class="footer__title">
               Контакти:
             </p>
-            <p class="footer__description">
-              вул. М. Грушевського, 6; Київ, 01001 <br>
-              тел. +38 (044) 278-13-57
-              факс +38 (044) 278-74-54 <br>
-              e-mail: info@namu.kiev.ua
-            </p>
+            <a
+              href="https://goo.gl/maps/CHqwmVZPnapkcBjV8"
+              target="_blank"
+              class="footer__description">
+                вул. М. Грушевського, 6; <br> Київ, 01001 <br>
+            </a>
+            <a
+              href="tel: +38 (044) 278-13-57"
+              target="_blank"
+              class="footer__description">
+                тел. +38 (044) 278-13-57 <br>
+            </a>
+            <a
+              href="tel: +38 (044) 278-74-54"
+              target="_blank"
+              class="footer__description">
+                факс +38 (044) <br> 278-74-54 <br>
+            </a>
+            <a
+              href="mailto: info@namu.kiev.ua"
+              target="_blank"
+              class="footer__description">
+                e-mail: info@namu.kiev.ua
+            </a>
           </div>
 
           <a href="#" class="footer__icon-bottom">
