--- a/src/index.html
+++ b/src/index.html
@@ -81,17 +81,13 @@
     </section>
     <!-- main -->
     <main class="body">
-      <section class="main-page main-page__conte " id="main">
+      <section class="main-page" id="main">
+        <div class="main-page__bg"></div>
         <div class="main-page__container">
           <div class="main-page__header">
             <a href="#menu" class="main-page__menu"></a>
             <a class="main-page__logo" href="#">NA<br>MU</a>
           </div>
-          <picture class="main-page__img">
-            <source media="(min-width: 1280px)" srcset="./images/1280/01.png">
-            <source media="(min-width: 768px)" srcset="./images/768/01.png">
-            <img src="./images/320/01.png" alt="Museum">
-          </picture>
           <div class="main-page__info">
             <h1 class="main-page__title title">художній музей</h1>
             <a href="#" class="main-page__btn">
@@ -110,11 +106,7 @@
             Aктуальні події
           </h2>
           <div class="events__card card">
-            <picture class="card__img">
-              <source media="(min-width: 1280px)" srcset="./images/1280/02.png">
-              <source media="(min-width: 768px)" srcset="./images/768/02.png">
-              <img src="./images/320/02.png" alt="picture">
-            </picture>
+            <div class="card__img card__img--1"></div>
             <div class="card__subtitle subtitle">
               <p class="subtitle__event">ВИСТАВКА</p>
               <p class="subtitle__date">26.08-29.11.2019</p>
@@ -129,11 +121,7 @@
             </p>
           </div>
           <div class="events__card card">
-            <picture class="card__img">
-              <source media="(min-width: 1280px)" srcset="./images/1280/03.png">
-              <source media="(min-width: 768px)" srcset="./images/768/03.png">
-              <img src="./images/320/03.png" alt="picture">
-            </picture>
+            <div class="card__img card__img--2"></div>
             <div class="card__subtitle subtitle">
               <p class="subtitle__event">ВИСТАВКА</p>
               <p class="subtitle__date">26.08-29.11.2019</p>
@@ -147,15 +135,15 @@
               відкриває ретроспективну ювілейну виставку «І спогади i мрії».
             </p>
           </div>
-          <div class="events__advert">
-            <div class="events__img"></div>
-            <div class="events__box">
-              <div class="events__subtitle subtitle">
-                <p class="subtitle__event">лекція</p>
-                <p class="subtitle__date">26/08/2019 - 11:00</p>
-              </div>
-              <h3 class="events__name ">Від класицизму до романтизму</h3>
+        </div>
+        <div class="events__advert">
+          <div class="events__img"></div>
+          <div class="events__box">
+            <div class="events__subtitle subtitle">
+              <p class="subtitle__event">лекція</p>
+              <p class="subtitle__date">26/08/2019 - 11:00</p>
             </div>
+            <h3 class="events__name ">Від класицизму до романтизму</h3>
           </div>
         </div>
       </section>
@@ -165,11 +153,8 @@
           <h3 class="gallery__title title">
             Галерея
           </h3>
-          <picture class="gallery__p1">
-            <source media="(min-width: 1280px)" srcset="./images/1280/05.png">
-            <source media="(min-width: 768px)" srcset="./images/768/05.png">
-            <img src="./images/320/05.png" alt="Museum">
-          </picture>
+          <img class="gallery__p1"
+          src ="./images/1280/05.png" alt="Museum"></img>
           <img src="./images/1280/05.1.png"
           alt="picture" class="gallery__p2">
           <img src="./images/1280/05.2.png"
