--- a/src/index.html
+++ b/src/index.html
@@ -222,25 +222,30 @@
 
       <section class="subscription">
         <div class="subscription__container">
+
           <div class="subscription__top">
             <h2 class="subscription__title">Підписка</h2>
             <h3 class="subscription__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</h3>
           </div>
-          <form
-            action="#"
-            class="subscription__form"
-            method="get"
-          >
-            <input
-              type="email"
-              class="subscription__item"
-              placeholder="E-mail"
-              required>
-          </input>
-            <button class="subscription__button"  type="submit">
-              <img src="./images/buttton-green.svg" alt="arrow">
-            </button>
-          </form>
+
+          <div class="subscription__info">
+            <form
+              action="/"
+              class="subscription__form"
+              method="get"
+              >
+              <input
+                type="email"
+                class="subscription__item"
+                placeholder="E-mail"
+                required
+              >
+              <button class="subscription__button"  type="submit">
+                <img
+                  src="./images/buttton-green.svg" alt="arrow">
+              </button>
+            </form>
+          </div>
         </div>
       </section>
 
