add hover edits

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,12 @@
           <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
           <div class="button art-museum__button">
-            <a href="#actual-events" class="button__link">КВИТКИ</a>
-
-            <a href="#actual-events">
-              <div class="button__arrow"></div>
-            </a>
+            <div class="art-museum__tickets">
+              <a href="#actual-events" class="button__link">КВИТКИ</a>
+              <a href="#actual-events">
+                <div class="button__arrow"></div>
+              </a>
+            </div>
 
             <a href="#actual-events"
               class="button__events"
