--- a/src/index.html
+++ b/src/index.html
@@ -234,18 +234,18 @@
             <div class="timetable timetable--footer">
               <div class="timetable__container">
                 <h6 class="timetable__title timetable__title--footer">Графік роботи</h6>
-                <div class="timetable__body timetable__body--foter">
-                  <span class="timetable__time">12:00 — 20:00</span>
-                  середа <br>
-                  <span class="timetable__time">12:00 — 20:00</span>
-                  четвер <br>
-                  <span class="timetable__time">12:00 — 20:00</span>
-                  п’ятниця <br>
-                  <span class="timetable__time">11:00 — 19:00</span>
-                  субота <br>
-                  <span class="timetable__time">11:00 — 19:00</span>
-                  неділя
-                </div>
+                <article class="timetable__body timetable__body--foter">
+                  <div class="timetable__time">12:00 — 20:00 </div>
+                   середа <br>
+                  <div class="timetable__time">12:00 — 20:00 </div>
+                   четвер <br>
+                  <div class="timetable__time">12:00 — 20:00 </div>
+                   п’ятниця <br>
+                  <div class="timetable__time">11:00 — 19:00 </div>
+                   субота <br>
+                  <div class="timetable__time">11:00 — 19:00 </div>
+                   неділя
+                </article>
               </div>
 
               <div class="burger__text">
@@ -255,9 +255,10 @@
               </div>
             </div>
 
-            <div class="timetable">
+            <div class="timetable timetable--contacts">
               <div class="timetable__container">
-                <h6 class="timetable__title">Контакти:</h6>
+                <h6 class="timetable__title timetable__title--footer">Контакти:</h6>
+
                 <div class="timetable__body">
                   вул. М. Грушевського, 6; Київ, 01001
                   <br>
@@ -270,7 +271,7 @@
               </div>
             </div>
 
-            <nav class="nav">
+            <nav class="nav nav--footer">
               <div class="nav__container">
                 <div class="nav__box">
                   <a href="#galery" class="nav__item nav__item--galery">Галерея</a>
