--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <div class="header__tickets">
               <div></div>
 
-              <a href="#" class="header__button button">
+              <a href="#events" class="header__button button">
 
                 <div class="button__rec">КВИТКИ</div>
 
@@ -49,7 +49,7 @@
                 </div>
               </a>
             </div>
-            <a href="#" class="header__events">ПОДІЇ</a>
+            <a href="#events" class="header__events">ПОДІЇ</a>
           </div>
         </div>
       </div>
@@ -69,9 +69,9 @@
               </div>
 
               <div class="nav__box">
-                <a href="#about" class="nav__item nav__item--about">Про Нас</a>
+                <a href="#subscription" class="nav__item nav__item--about">Про Нас</a>
 
-                <a href="#contacts" class="nav__item nav__item--contacts">Контакти</a>
+                <a href="#footer" class="nav__item nav__item--contacts">Контакти</a>
               </div>
             </div>
           </nav>
@@ -104,7 +104,7 @@
       </div>
     </aside>
 
-    <section class="cur-events">
+    <section class="cur-events" id="events">
       <div class="cur-events__container">
         <div class="cur-events__content">
           <h2 class="cur-events__grand-title">Актуальні
@@ -163,7 +163,7 @@
       </div>
     </section>
 
-    <section class="galery page__galery">
+    <section class="galery page__galery" id="galery">
       <div class="galery__container">
         <div class="galery__content">
           <h2 class="galery__grand-title">Галерея
@@ -186,7 +186,7 @@
       </div>
     </section>
 
-    <section class="subscription">
+    <section class="subscription" id="subscription">
       <div class="subscription__container">
         <div class="subscription__content">
           <div class="page__title subscription__title">Підписка</div>
@@ -211,7 +211,7 @@
       </div>
     </section>
 
-    <section class="footer">
+    <section class="footer" id="footer">
       <div class="footer__container">
         <div class="footer__content">
           <div class="footer__grid">
@@ -225,9 +225,19 @@
               </a>
 
               <div class="footer__icons">
-                <a href="#" class="icon icon--face"></a>
+                <a
+                  href="https://www.facebook.com/namu.museum"
+                  target="_blank"
+                  class="icon icon--face"
+                >
+                </a>
 
-                <a href="#" class="icon icon--inst"></a>
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="icon icon--inst"
+                  target="_blank"
+                >
+                </a>
               </div>
             </div>
 
@@ -235,22 +245,22 @@
               <div class="timetable__container">
                 <h6 class="timetable__title timetable__title--footer">Графік роботи</h6>
                 <article class="timetable__body timetable__body--foter">
-                  <div class="timetable__time">12:00 — 20:00 </div>
+                  <span class="timetable__time">12:00 — 20:00 </span>
                    середа <br>
-                  <div class="timetable__time">12:00 — 20:00 </div>
+                  <span class="timetable__time">12:00 — 20:00 </span>
                    четвер <br>
-                  <div class="timetable__time">12:00 — 20:00 </div>
+                  <span class="timetable__time">12:00 — 20:00 </span>
                    п’ятниця <br>
-                  <div class="timetable__time">11:00 — 19:00 </div>
+                  <span class="timetable__time">11:00 — 19:00 </span>
                    субота <br>
-                  <div class="timetable__time">11:00 — 19:00 </div>
+                  <span class="timetable__time">11:00 — 19:00 </span>
                    неділя
                 </article>
               </div>
 
-              <div class="burger__text">
+              <div class="footer__text">
                 <span class="burger__time">Вихідні:</span> понеділок, вівторок <br>
-                Каса припиняє роботу за 1 годину
+                Каса припиняє роботу за 1 годину <br>
                 до закриття музею
               </div>
             </div>
@@ -259,7 +269,7 @@
               <div class="timetable__container">
                 <h6 class="timetable__title timetable__title--footer">Контакти:</h6>
 
-                <div class="timetable__body">
+                <div class="timetable__info">
                   вул. М. Грушевського, 6; Київ, 01001
                   <br>
                   тел. +38 (044) 278-13-57
@@ -271,18 +281,24 @@
               </div>
             </div>
 
-            <nav class="nav nav--footer">
-              <div class="nav__container">
-                <div class="nav__box">
-                  <a href="#galery" class="nav__item nav__item--galery">Галерея</a>
+            <div class="footer__on-top">
+              <a href="#" class="footer__on-top-link"></a>
+            </div>
 
-                  <a href="#events" class="nav__item nav__item--events">Виставки та<br>події</a>
+            <div class="footer__line"></div>
+
+            <nav class="nav nav--footer">
+              <div class="nav__container nav__container--footer">
+                <div class="nav__box nav__box--footer">
+                  <a href="#galery" class="nav__item nav__item--footer nav__item--galery">Галерея</a>
+
+                  <a href="#events" class="nav__item nav__item--footer nav__item--events nav__item--contacts--footer">Виставки та події</a>
                 </div>
 
-                <div class="nav__box">
-                  <a href="#about" class="nav__item nav__item--about">Про Нас</a>
+                <div class="nav__box nav__box--footer">
+                  <a href="#subscription" class="nav__item nav__item--footer nav__item--about">Про Нас</a>
 
-                  <a href="#contacts" class="nav__item nav__item--contacts">Контакти</a>
+                  <a href="#footer" class="nav__item nav__item--footer nav__item--contacts nav__item--contacts--footer">Контакти</a>
                 </div>
               </div>
             </nav>
