add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -41,17 +41,10 @@
         <div class="header__left">
           <h1 class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</h1>
           <div class="header__btn">
-            <input
-              class="header__input"
-              type="text"
-              placeholder="КВИТКИ"
-              readonly
-            >
-            <input
-              class="header__button"
-              type="submit"
-              value="."
-            >
+            <button class="header__input">
+              КВИТКИ
+              <span></span><span></span><span></span>
+            </button>
           </div>
         </div>
 
@@ -347,7 +340,6 @@
                         <li class="contacts__item-contact">
                           <a
                             href="tel:+38(044)2781357"
-                            target="_blank"
                             class="contact__phone"
                           >
                             тел. +38 (044) 278-13-57
@@ -356,7 +348,6 @@
                         <li class="contacts__item-contact">
                           <a
                             href="tel:+38(044)2787454"
-                            target="_blank"
                             class="contact__phone"
                           >
                             факс +38 (044) 278-74-54
