complete event block

--- a/src/index.html
+++ b/src/index.html
@@ -144,14 +144,21 @@
           Актуальні події
         </h2>
 
-        <div class="events__exhibition exhibition">
+        <div
+          class="
+            events__exhibition
+            exhibition
+            events__exhibition--first_top_margin
+            grid
+            grid--desktop
+          ">
           <img
             src="./images/events_foto/event_1.jpg"
             alt="Йду і повертаюсь"
-            class="exhibition__img"
+            class="exhibition__img grid__item--desktop-1-7"
           >
 
-          <div class="exhibition__content">
+          <div class="exhibition__content grid__item--desktop-8-12">
             <div class="exhibition__caption">
               <div class="exhibition__caption-tittle">
                 виставка
@@ -172,14 +179,20 @@
           </div>
         </div>
 
-        <div class="events__exhibition exhibition">
+        <div
+          class="
+            events__exhibition
+            exhibition
+            grid
+            grid--desktop
+          ">
           <img
             src="./images/events_foto/event_2.jpg"
             alt="І спогади і мрії"
-            class="exhibition__img"
+            class="exhibition__img grid__item--desktop-1-7"
           >
 
-          <div class="exhibition__content">
+          <div class="exhibition__content grid__item--desktop-8-12">
             <div class="exhibition__caption">
               <div class="exhibition__caption-tittle">
                 виставка
@@ -220,7 +233,7 @@
       </section>
 
       <section class="page__section gallery" id="gallery">
-
+        <h2>Галерея</h2>
       </section>
 
       <section class="page__section subscribe" id="subscribe">
