--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,9 @@
             </div>
           </div>
 
-          <p class="work-schedule__text work-schedule__text--info menu__info">
-            Вихідні понеділок, вівторок<br>
+          <p
+          class="work-schedule__text work-schedule__text--info menu__info">
+            <span class="work-schedule__text--bold">Вихідні:</span>  понеділок, вівторок<br>
             Каса припиняє роботу за 1 годину<br>
             до закриття музею
           </p>
@@ -252,7 +253,7 @@
               </p>
             </div>
             <p class="work-schedule__text work-schedule__text--info">
-              Вихідні понеділок, вівторок<br>
+              <span class="work-schedule__text--bold">Вихідні:</span> понеділок, вівторок<br>
               Каса припиняє роботу за 1 годину<br>
               до закриття музею
             </p>
